Fix spacing between elements, button hover and focus

--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
-html {
+body {
     height: 100vh;
     background: url("images/background.jpeg");
     background-size: cover;
     font-weight: bold;
-    color: white;
     font-family: orbitron;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 #inner {
-    min-height: 80vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,10 +40,11 @@ html {
     text-shadow: 0 0 0.5rem black;
 }
 
-.button:hover {
+.button:hover,
+.button:focus {
     border: 0.2rem solid greenyellow;
-    width: 250px;
-    height: 250px;
+    box-shadow: 10px 10px 10px greenyellow;
+    cursor: pointer;
 }
 
 #rule {
